--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,15 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+
+    - name: Verify Docker & Docker Compose Installation
+      run: |
+        docker --version
+        docker-compose --version
 
     - name: Build and Start Docker Containers
       run: |
@@ -23,13 +30,3 @@ jobs:
 
     - name: Show Running Containers
       run: docker ps
-
-    - name: Wait for Backend to Start
-      run: |
-        sleep 10  # Give some time for the backend to start
-        curl -f http://localhost:8000 || exit 1
-
-    - name: Wait for Frontend to Start
-      run: |
-        sleep 10  # Give some time for the frontend to start
-        curl -f http://localhost:3000 || exit 1
