--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,28 +3,27 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Create and activate virtual environment
 RUN python -m venv /app/venv
+ENV PATH="/app/venv/bin:$PATH"
 
-# Copy requirements file first
+# Copy requirements file first (to leverage Docker cache)
 COPY backend/requirements.txt .
 
 # Install dependencies inside virtual environment
-RUN /app/venv/bin/pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy backend code
+# Copy backend source code
 COPY backend/ .
-
-# Make sure the script is executable
-RUN chmod +x server.py
 
 # Expose the port
 EXPOSE 8000
 
-# Use the virtual environment when running the server
-CMD ["/app/venv/bin/python", "server.py"]
+# Start the server
+CMD ["python", "server.py"]
+
