--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -7,10 +5,8 @@ services:
       dockerfile: backend/Dockerfile
     ports:
       - "8000:8000"
-      - "8000:8000/tcp"
-      - "8000:8000/udp"
     volumes:
-      - ./backend:/app
+      - ./backend:/app:delegated
     environment:
       - OLLAMA_HOST=ollama
       - OLLAMA_PORT=11434
@@ -28,9 +24,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app:delegated
       - /app/node_modules
-      - /app/.next
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
     depends_on:
@@ -51,8 +46,6 @@ services:
     image: ollama/ollama:latest
     command: >
       sh -c "
-        ollama serve &
-        sleep 5 &&
         ollama pull llava &&
         exit 0
       "
@@ -69,3 +62,4 @@ networks:
 
 volumes:
   ollama_data:
+
