--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Build and Push Docker Images
         run: |
-          docker-compose build
-          docker-compose up -d
+          docker compose up --build -d
 
       - name: Check Running Containers
         run: docker ps -a
