--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   backend:
     build:
@@ -14,52 +15,13 @@ services:
     depends_on:
       ollama-init:
         condition: service_completed_successfully
-    networks:
-      - app_network
-
-  frontend:
-    build:
-      context: .
-      dockerfile: frontend/Dockerfile
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app:delegated
-      - /app/node_modules
-    environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
-    depends_on:
-      - backend
-    networks:
-      - app_network
-
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - "11435:11434"
-    volumes:
-      - ollama_data:/root/.ollama
-    networks:
-      - app_network
-
-  ollama-init:
-    image: ollama/ollama:latest
-    command: >
+    entrypoint: >
       sh -c "
-        ollama pull llava &&
-        exit 0
+        echo 'Waiting for Ollama...';
+        until curl -s ollama:11434; do
+          sleep 5;
+        done;
+        exec /app/venv/bin/python server.py
       "
-    volumes:
-      - ollama_data:/root/.ollama
-    depends_on:
-      - ollama
     networks:
       - app_network
-
-networks:
-  app_network:
-    driver: bridge
-
-volumes:
-  ollama_data:
-
