--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,37 @@
 name: Build and Deploy
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 30  # Increased timeout
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+      
       - name: Build and Push Docker Images
         run: |
           docker compose up --build -d
-
+          # Wait for services to be ready
+          echo "Waiting for services to be ready..."
+          sleep 30
+          
       - name: Check Running Containers
-        run: docker ps -a
-
-      - name: Show Backend Logs (If Crashes)
+        run: |
+          echo "Listing all containers and their status:"
+          docker ps -a
+          echo "Container logs:"
+          docker compose logs
+      
+      - name: Show Ollama Logs
+        if: always()
+        run: docker logs $(docker ps -aqf "name=ollama") || true
+      
+      - name: Show Backend Logs
+        if: always()
         run: docker logs $(docker ps -aqf "name=backend") || true
