--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - OLLAMA_PORT=11434
       - PYTHONUNBUFFERED=1
     depends_on:
-      ollama-init:
-        condition: service_completed_successfully
+      ollama:
+        condition: service_healthy
     networks:
       - app_network
 
@@ -39,26 +39,29 @@ services:
       - "11435:11434"
     volumes:
       - ollama_data:/root/.ollama
+    environment:
+      - OLLAMA_HOST=0.0.0.0:11434
+      - OLLAMA_ORIGINS=*
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "curl", "-sf", "http://localhost:11434/api/tags"]
+      test: ["CMD-SHELL", "curl -f http://localhost:11434/api/tags || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 20s
-
-  ollama-init:
-    image: ollama/ollama:latest
-    volumes:
-      - ollama_data:/root/.ollama
-    depends_on:
-      ollama:
-        condition: service_healthy
-    networks:
-      - app_network
-    entrypoint: ollama
-    command: pull llava
+      start_period: 30s
+    command: >
+      sh -c "
+        ollama serve &
+        sleep 10 &&
+        until curl -sf localhost:11434/api/tags; do
+          echo 'Waiting for Ollama API...'
+          sleep 2
+        done &&
+        echo 'Ollama API is ready. Pulling llava model...' &&
+        ollama pull llava &&
+        wait
+      "
 
 networks:
   app_network:
