--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - OLLAMA_PORT=11434
       - PYTHONUNBUFFERED=1
     depends_on:
-      ollama:
-        condition: service_healthy
+      ollama-init:
+        condition: service_completed_successfully
     networks:
       - app_network
 
@@ -45,23 +45,23 @@ services:
     networks:
       - app_network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:11434/api/tags || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
-    command: >
-      sh -c "
-        ollama serve &
-        sleep 10 &&
-        until curl -sf localhost:11434/api/tags; do
-          echo 'Waiting for Ollama API...'
-          sleep 2
-        done &&
-        echo 'Ollama API is ready. Pulling llava model...' &&
-        ollama pull llava &&
-        wait
-      "
+    command: ["ollama", "serve"]
+
+  ollama-init:
+    image: ollama/ollama:latest
+    volumes:
+      - ollama_data:/root/.ollama
+    depends_on:
+      ollama:
+        condition: service_healthy
+    networks:
+      - app_network
+    command: ["ollama", "pull", "llava"]
 
 networks:
   app_network:
