--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,21 @@
+# Use official Node.js LTS image
 FROM node:21-alpine
 
+# Set working directory
 WORKDIR /app
 
-# Copy package files
-COPY frontend/package*.json ./
-
 # Install dependencies
+COPY frontend/package*.json ./
 RUN npm install
 
-# Copy frontend code
-COPY frontend/ .
+# Copy the entire frontend directory
+COPY frontend ./
 
 # Build the application
 RUN npm run build
+
+# Expose port
+EXPOSE 3000
 
 # Start the application
 CMD ["npm", "start"]
