--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.6",
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
