--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-use-websocket": "^4.13.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
